file move-around

--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
                     <div class="card-header"">Highschool</div>
                     <div class="card-body">
                       <h5 class="card-title" id="text-1">Sports</h5>
-                      <p class="card-text">I grew  playing a lot of soccer. While I wish I stuck with it, I made a transition to Track and Cross Country and really enjoyed the feeling of finishing a three mile race in record times every week. Threre was something soothing about being uncomfortable for 18 minutes that still confuses me today.</p>
+                      <p class="card-text">I grew up playing a lot of soccer. While I wish I stuck with it, I made a transition to Track and Cross Country and really enjoyed the feeling of finishing a three mile race in record times every week. Threre was something soothing about being uncomfortable for 18 minutes that still confuses me today.</p>
                     </div>
                   </div>
             </div>
             
             <div class="col-sm">
-                <div class="card text-white bg-danger mb-3 w-200 mx-auto h-100" id="card-2" style="">
+                <div class="card text-white bg-primary mb-3 w-200 mx-auto h-100" id="card-2" style="">
                     <div class="card-header">My Free Time</div>
                     <div class="card-body">
                       <h5 class="card-title">Fill In</h5>
